// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package github.com.openbao.go.kms.wrapping.plugin.v2;

import "github.com.openbao.go.kms.wrapping.v2.types.proto";

option go_package = "github.com/openbao/go-kms-wrapping/v2/plugin;plugin";

message TypeRequest {}
message TypeResponse {
  string type = 10;
}

message KeyIdRequest {}
message KeyIdResponse {
  string key_id = 10 [json_name = "key_id"];
}

message SetConfigRequest {
  github.com.openbao.go.kms.wrapping.v2.types.Options options = 20;
}
message SetConfigResponse {
  github.com.openbao.go.kms.wrapping.v2.types.WrapperConfig wrapper_config = 10;
}

message EncryptRequest {
  bytes plaintext = 10;
  github.com.openbao.go.kms.wrapping.v2.types.Options options = 20;
}
message EncryptResponse {
  github.com.openbao.go.kms.wrapping.v2.types.BlobInfo ciphertext = 10;
}

message DecryptRequest {
  github.com.openbao.go.kms.wrapping.v2.types.BlobInfo ciphertext = 10;
  github.com.openbao.go.kms.wrapping.v2.types.Options options = 20;
}
message DecryptResponse {
  bytes plaintext = 10;
}

message InitRequest {
  github.com.openbao.go.kms.wrapping.v2.types.Options options = 20;
}
message InitResponse {}

message FinalizeRequest {
  github.com.openbao.go.kms.wrapping.v2.types.Options options = 20;
}
message FinalizeResponse {}

message KeyBytesRequest {}
message KeyBytesResponse {
  bytes key_bytes = 10 [json_name = "key_bytes"];
}

service Wrapper {
  rpc Type(TypeRequest) returns (TypeResponse);
  rpc KeyId(KeyIdRequest) returns (KeyIdResponse);
  rpc SetConfig(SetConfigRequest) returns (SetConfigResponse);
  rpc Encrypt(EncryptRequest) returns (EncryptResponse);
  rpc Decrypt(DecryptRequest) returns (DecryptResponse);
  rpc Init(InitRequest) returns (InitResponse);
  rpc Finalize(FinalizeRequest) returns (FinalizeResponse);
  rpc KeyBytes(KeyBytesRequest) returns (KeyBytesResponse);
}
