// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package wrapping;
option go_package = "github.com/openbao/go-kms-wrapping/v2;wrapping";

// WrapperConfig is the result of a call to SetConfig on a wrapper, returning
// relevant information about the wrapper and its updated configuration
message WrapperConfig {
  map<string, string> metadata = 10;
}

// EnvelopeInfo contains the information necessary to perfom encryption or
// decryption in an envelope fashion.
message EnvelopeInfo {
  // Ciphertext is the ciphertext from the envelope.
  bytes ciphertext = 1;

  // Key is the key used in the envelope.
  bytes key = 2;

  // IV is the initialization value used during encryption in the envelope.
  bytes iv = 3;
}

// BlobInfo contains information about the encrypted value along with
// information about the key used to encrypt it.
message BlobInfo {
  // Ciphertext holds the encrypted bytes.
  bytes ciphertext = 1;

  // IV is the initialization value used during encryption.
  bytes iv = 2;

  // KeyInfo contains information about the key that was used to create this
  // value.
  KeyInfo key_info = 5;
}

// KeyInfo contains information about the key was used to encrypt an entry.
message KeyInfo {
  // Mechanism is the method used by the wrapper to encrypt and sign the data as
  // defined by the wrapper. (optional)
  uint64 mechanism = 1;

  // This is an opaque ID used by the wrapper to identify the specific key
  // to use as defined by the wrapper. This could be a version, key label, or
  // something else. (optional)
  string key_id = 3;

  // This value is used when generating our own data encryption keys and
  // encrypting them using the wrapper. (optional)
  bytes wrapped_key = 5;
}

// Options holds options common to all wrappers.
message Options {
  // The key ID to specify.
  string with_key_id = 10;

  // The AAD bytes, if any.
  bytes with_aad = 20;

  // Wrapper-specific configuration to pass along.
  map<string, string> with_config_map = 30;

  // Whether to allow configuration values to be read from the environment.
  bool with_disallow_env_vars = 90;
}
